--- a/Face_and_Eye_Detection_using_Casacde_Classifier.ipynb
+++ b/Face_and_Eye_Detection_using_Casacde_Classifier.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Face and Eye Detection using  Casacde  Classifier",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyNzPhlLEO3PgF2sj4HWgkWF",
       "include_colab_link": true
     },
